[project]
name = "group-assistant"
version = "1.0.8"
description = "阿组小助手（Group Assistant）可以让组自动包裹组节点，实现自动调整组边界，让组功能更好用。Group Assistant can automatically wrap group nodes, achieve automatic adjustment of group boundaries, making group functions more useful."
readme = "README.md"
license = {text = "GNU General Public License v3"}
classifiers = [
    "Operating System :: OS Independent"  
]

[project.urls]
Repository = "https://github.com/yawiii/comfyui_group_assistant"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]

PublisherId = "yawiii"
DisplayName = "Group Assistant" 
Icon = "https://raw.githubusercontent.com/yawiii/comfyui_group_assistant/refs/heads/main/icon.png" 
